Fix layout on IE11.

--- a/src/app/main.scss
+++ b/src/app/main.scss
@@ -20,7 +20,3 @@ body {
     font-weight: normal;
     margin: 0;
 }
-
-.error {
-    text-align: center;
-}
