--- a/src/app/theme/utils/_layout.scss
+++ b/src/app/theme/utils/_layout.scss
@@ -1,7 +1,15 @@
 main {
     margin: auto;
     max-width: 840px;
-}
+
+    @media screen and (min-width: 841px) {
+            .facet_sidebar {
+                display: flex;
+                flex-direction: column;
+                width: 840px;
+            }
+        }
+    }
 .container {
     align-items: flex-start;
     box-sizing: border-box;
